:green_heart: Add v3-bordeaux in ingress

--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -26,7 +26,16 @@ spec:
                 port:
                   number: 4000
 
-          # 3) Frontend : tout le reste → Next.js
+          # 3) V3-Bordeaux : /v3-bordeaux → NestJS
+          - path: /v3-bordeaux
+            pathType: Prefix
+            backend:
+              service:
+                name: v3-bordeaux
+                port:
+                  number: 4001
+
+          # 4) Frontend : tout le reste → Next.js
           - path: /
             pathType: Prefix
             backend:
